--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
+    "emoji-mart": "^3.0.1",
+    "emoji-mart-vue": "^2.6.6",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
